sausage-store-infra/kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: std-ext-014-39
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
